# connector-zillow

./: .gitignore  README.md  cookie.txt  package.json  pyproject.toml  requirements.txt  taskfile.yaml  zillow.py
.github/workflows/: playwright.yml
docs/: playwright.md
src/zillow/: __main__.py  cli.py  parse.py
tests/: conftest.py  server.py  test_playwright_example.py  test_zillow.py
tests/async/: conftest.py  test_asyncio.py  test_zillow.py
