[project]
name = "zillow"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" }]
dependencies = [
    "argparse>=1.4",
    "lxml>=5.0",
    "python-anticaptcha>=1",
    "requests>=2.30",
    "unicodecsv>=0.14",
    "playwright>=1.40",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
zillow = "zillow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4",
    "pip>=24",
    "uv>=0.2",
    "mypy>=1.10",
    "pyright>=1.1",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pylint>=3.2",
    "black>=24.4",
    "types-lxml>=2024.4",
    "isort>=5.13",
    "pytest-asyncio>=0.23",
    "pillow>=10.3",
    "pixelmatch>=0.3",
    "autobahn[twisted,encryption]>=23.6",
    "pytest-cover>=3.0",
    "coverage>=7.5",
]

[tool.rye.scripts]
typecheck = "pyright"
z = { call = "zillow.__main__" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zillow"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --browser chromium"
testpaths = ["tests"]
asyncio_mode = "auto"
