[project]
name = "zillow"
version = "0.1.0"
description = "Simple Zillow scraper"
authors = [{ name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" }]
dependencies = [
    "argparse>=1.4",
    "lxml>=5.0",
    "python-anticaptcha>=1",
    "requests>=2.30",
    "unicodecsv>=0.14",
    "playwright>=1.40",
]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
zillow = "zillow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
package = true
[tool.rye.scripts]
typecheck = "pyright"
z = { call = "zillow.__main__" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zillow"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --browser chromium"
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "autobahn[twisted,encryption]>=23.6",
    "black>=24.4",
    "coverage>=7.5",
    "isort>=6.0.1",
    "lxml-stubs>=0.5.1",
    "mypy>=1.10",
    "pillow>=10.3",
    "pip>=24",
    "pixelmatch>=0.3",
    "pylint>=3.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-cover>=3.0",
    "pytest>=8.2",
    "ruff>=0.9.9",
    "types-lxml>=2024.4",
    "types-requests>=2.32.0.20240602",
]
